<resources>
    <string name="app_name">Gestão Pacientes</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="doentes">Doentes</string>
    <string name="estadosaude">Estado de Saúde</string>
    <string name="adicionar_doente">Adicionar Doente</string>
    <string name="editar_doente">Editar Doente</string>
    <string name="ver_doente">Ver Doente</string>
    <string name="apagar_doente">Apagar Doente</string>
    <string name="adicionar_estado_saude">Adicionar Estado de Saúde</string>
    <string name="apagar_estado_saude">Apagar Estado de Saúde</string>
    <string name="ver_estado_de_saude">Ver Estado de Saúde</string>
    <string name="editar_estado_de_saude">Editar Estado de Saúde</string>
    <string name="sintomas">Sintomas</string>
    <string name="adicionar_sintomas">Adicionar Sintomas</string>
    <string name="editar_sintomas">Editar Sintomas</string>
    <string name="ver_sintomas">Ver Sintomas</string>
    <string name="apagar_sintomas">Apagar Sintomas</string>
    <string name="nome_do_utente">Nome do Utente</string>
    <string name="morada_do_utente">Morada do Utente</string>
    <string name="contacto_do_utente">Contacto do Utente</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="dia_da_visita">Dia da Visita</string>
    <string name="hora_da_visita">Hora da Visita</string>
    <string name="temperatura_recolhida">Temperatura Recolhida</string>
    <string name="medicamentos">Medicamentos</string>
    <string name="sintoma">Sintoma(s)</string>
    <string name="descricao_sintomas">Descrição dos Sintomas</string>
    <string name="data_botao">Data</string>
    <string name="preencherNome">É necessário preencher o Nome.</string>
    <string name="preencherMorada">É necessário preencher a Morada.</string>
    <string name="preencherContacto">Contacto obrigatório!</string>
    <string name="ContactoErrado">Contacto Inválido</string>
    <string name="horas_botao">Horas</string>
    <string name="dia_visita">Dia da Visita</string>
    <string name="horas_da_visitas">Horas da Visitas</string>
    <string name="dados_do_paciente">Dados do Paciente</string>
    <string name="sintomas_obrigatorios">Campo Obrigatório</string>
    <string name="descricao_sintomas_obrigatoria">Campo Obrigatório</string>
    <string name="temperatura_obrigatoria">Campo Obrigatório</string>
    <string name="medicamentos_obrigatorios">Campo Obrigatório</string>
    <string name="Data_obrigatoria">Data de Nascimento Obrigatória</string>
    <string name="Hora_visita_obrigatoria">Campo Obrigatório</string>
    <string name="Dia_visita_obrigatoria">Campo Obrigatório</string>
    <string name="alterar">Alterar</string>
    <string name="data_da_visita">Data da Visita</string>
    <string name="paciente_adicionado">Doente adicionado com sucesso</string>
    <string name="falha_paciente">Falha ao adicionar doente</string>
    <string name="estado_adicionado">Estado adicionado com sucesso</string>
    <string name="falha_estado">Falha ao adicionar estado</string>
    <string name="sintoma_adicionado">Sintoma adicionado com sucesso</string>
    <string name="falha_sintoma">Falha ao adicionar sintoma</string>
    <string name="doente_alterado">Doente alterado com sucesso</string>
    <string name="erro_alterar_doente">Erro ao alterar doente</string>
    <string name="sintoma_alterado">Sintoma alterado com sucesso</string>
    <string name="erro_alterar_sintoma">Erro ao alterar sintoma</string>
    <string name="erro_ler_sintoma">Erro: não foi possivel ler o Sintoma!</string>
    <string name="erro_ler_doente">Erro: não foi possivel ler o Doente!</string>
    <string name="doente_apagado">Doente apagado com sucesso!</string>
    <string name="sintoma_apagado">Sintoma apagado com sucesso!</string>
    <string name="error">Erro</string>
    <string name="nome">Nome</string>
    <string name="morada">Morada</string>
    <string name="contacto">Contacto</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="doente">Doente</string>
    <string name="descricao_de_sintomas">Descrição de Sintomas</string>


</resources>
