<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityAdicionarEstadoSaude">

    <Button
        android:id="@+id/buttonHoraSaude"
        android:layout_width="80dp"
        android:layout_height="42dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="40dp"
        android:text="@string/horas_botao"
        app:layout_constraintEnd_toStartOf="@+id/textViewHoraVisita"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDataSaude" />

    <TextView
        android:id="@+id/textViewDiaVisita"
        android:layout_width="280dp"
        android:layout_height="41dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/dia_da_visita"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewHoraVisita"
        android:layout_width="280dp"
        android:layout_height="41dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/horas_da_visitas"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDiaVisita" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutContactoUtente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHoraVisita">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TestInputEditTextInserirTemperatura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/temperatura_recolhida"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutMedicamentos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutContactoUtente">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TestInputEditTextInserirMedicamentos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/medicamentos"
            android:inputType="textLongMessage|none" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonAdicionarSintomas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:onClick="enviaEstadoSaude"
        android:text="@string/adicionar_estado_saude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutMedicamentos" />

    <Button
        android:id="@+id/buttonDataSaude"
        android:layout_width="80dp"
        android:layout_height="42dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="120dp"
        android:text="@string/data_botao"
        app:layout_constraintEnd_toStartOf="@+id/textViewDiaVisita"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>