<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonDoentes"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginTop="224dp"
        android:onClick="passaDoente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/doentes"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:textAllCaps="false"
        android:background="@drawable/custom_button"
        />

    <Button
        android:id="@+id/buttonEstadoSaude"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:onClick="passaEstadoSaude"
        android:text="@string/estadosaude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDoentes"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:textAllCaps="false"
        android:background="@drawable/custom_button"/>

    <Button
        android:id="@+id/buttonSintomas"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:onClick="passaSintomas"
        android:text="@string/sintomas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEstadoSaude"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:textAllCaps="false"
        android:background="@drawable/custom_button"/>
</androidx.constraintlayout.widget.ConstraintLayout>