<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityAdicionarDoente">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutNomeUtente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TestInputEditTextInserirNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome_do_utente" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutMorada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNomeUtente">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TestInputEditTextInserirMorada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/morada_do_utente" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutTemperatura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutMorada">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TestInputEditTextInserirContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contacto_do_utente" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDataNascimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAdicionarSintomas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutTemperatura">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TestInputEditTextInserirDataNascimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/data_de_nascimento" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonAdicionarSintomas"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginBottom="160dp"
        android:onClick="enviaMensagem"
        android:text="@string/adicionar_doente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:textAllCaps="false"
        android:background="@drawable/custom_button"/>


</androidx.constraintlayout.widget.ConstraintLayout>