<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityAlteraSintomas">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInputLayoutSintoma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TextInputEditTextAlteraSintoma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sintoma" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInputLayoutDSintomas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutSintoma">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TextInputEditTextAlteraDSintomas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descricao_sintomas" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonAlteraSintomas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="157dp"
        android:layout_marginLeft="157dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="166dp"
        android:layout_marginRight="166dp"
        android:onClick="AlterarSintomas"
        android:text="@string/alterar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutDSintomas" />
</androidx.constraintlayout.widget.ConstraintLayout>